<resources>
    <string name="app_name">Draft3</string>
    <string name="Track_Drink">Track Drink</string>
    <string name="App_Logo">My Drinking App Logo</string>
    <string name="BAC_Percent">0.08%</string>
    <string name="Warning">*Your BAC percentage is based on calculation and might be off</string>
    <string name="Tests">Sobriety Test</string>
    <string name="Help">Help</string>
    <string name="Settings_edit">Edit</string>
    <string name="Test">TestString</string>
</resources>